# ai-knowledge-assistant

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: embeddings.py  llm.py  pdf_loader.py
backend/app/routers/: chat.py  documents.py
frontend/: package.json  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: ChatUI.tsx  FileUploader.tsx  MessageBubble.tsx
